# snitch-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  test.sh
.github/workflows/: backend-docker-publish.yml  docker-publish.yml  frontend-docker-publish.yml
backend/: Cargo.toml  Dockerfile  Makefile  build.rs
backend/docker/: docker-compose.yml
backend/src/: lib.rs  main.rs  message.proto
backend/src/api/: authentication.rs  messages.rs  mod.rs  notification_settings.rs  registration.rs  token.rs  users.rs
backend/src/model/: message.rs  user.rs
backend/src/persistence/: mod.rs  redis.rs  token.rs
backend/src/service/: authentication.rs  kafka.rs  mod.rs  notification_dispatcher.rs
backend/src/service/templates/: registration.html
docker/: docker-compose.yml
frontend/: Cargo.toml
frontend/src/components/: message.rs  user_details.rs
frontend/src/services/: backend.rs
src/: authentication_service.rs  errors.rs  intentory.rs  main.rs  model.rs
src/api/: authentication.rs  messages.rs  mod.rs  oauth.rs  registration.rs  token.rs  users.rs
src/model/: message.rs  mod.rs  user.rs
src/persistance/: mod.rs  mongodb.rs  redis.rs  token.rs  user.rs  users.rs
src/persistence/: mod.rs  redis.rs  token.rs
src/service/: authentication.rs  email.rs  kafka.rs  mod.rs  notification_dispatcher.rs  notification_filter.rs  token.rs
src/service/templates/: registration.html
