[package]
name = "snitch-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-lab = "0.18.9"
actix-identity = "0.5.2"
actix-session = {version="0.7.2", features=["redis-rs-session", "cookie-session"]}
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.2"
tokio = { version = "1", features = ["full"] }
serde = {version = "*", features=["derive"]}
serde_json = "*"
derive_more = "0.99.17"
reqwest = "0.11.11"
mongodb = "2.3.0"
anyhow = "1.0"
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"
chrono = {version="0.4.21", features=["serde"]}
snitch = {path="../snitch"}
async-trait = "0.1.57"
redis = {version="0.21.5", features=["tokio-comp", "streams"]}
exonum-crypto = "1.0.0"
jwt-compact = "0.6.0"
rand = "0.8.5"
argonautica = "0.2.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]